--- a/Relatividad Especial/TareaParcial1/content.tex
+++ b/Relatividad Especial/TareaParcial1/content.tex
@@ -1,11 +1,16 @@
 \section{Tema 1}
-
+Según lo que recuerdo de física moderna, nada puede viajar más rápido que la luz en el vacío. Pero, recuerdo haber leído hacerca de un experimento en la antártida para detección de neutrinos, según lo que recuerdo derretían columnas de hielo puesto que la luz interactúa más que los neutrinos con el agua, por ende los neutrínos viajan más rápido y se muestran como "haces de luz" y así realizaba la detección. No encontre el documento donde recuerdo haber leído esto y no esto seguro de que sea así, pero se me hizo bastante interesante.
 \section{Tema 2}
-
+En una superficie distina a la euclideana, la suma de los ánglos de un trángulo no tiene porque ser $180^o$, de hecho en una esfera, la suma de los ańgulos internos de la figura llamada "triángulo esférico" está acotada de la siguiente forma $180^o < \sum \alpha _i < 540 ^o$. En una superficie plana es claro que la suma de los ángulos internos de un triángulo, es demostrable bajo los axiomas de la geometría euclideana.\\
+Así como en la tierra estamos en una "esfera" (es un geoide, pero lo tomaremos como esfera solo para desarrollar el ejemplo) y en nuestra escala parece que estamos en una superfice plana. Teniendo esto en mente, suoniendo que la geometría esferica, o su construcción dependa del radio de dicha esfera, podríamos tomar el radio de dicha esfera lo suficientemente grande, de modo que la superficie de la esfera se aproxime a una superficie euclideana.
 \section{Tema 3}
-
+Es interesante puesto que respecto de un sistema en la tierra, no coinciden en las direcciones arriba y abajo, y solo con sus cabezas apuntando en ciertas direcciones podrían coincidir en la derecha e izquierda o adelante y atrás. Tomando un sistema fuera de la tierra no existe arriba y abajo, simplemente al decirle a los sujetos de prueba que "miren hacia arriba", solo mirarán en direcciones opuestas.
 \section{Tema 4}
-
-\section{Tema 5}
-
-\section{Tema 6}
+Ejemplos de sistemas no inerciales:
+	\begin{itemize}
+		\item Un sistema fijo en la tierra, desde el cual se midan los sucesos desde la tierra en movimiento.
+		\item Siguiendo la idea anterior, un sistema en rotación.
+		\item Un sistema acelerado (no la medidición de un sistema acelerado desde uno en reposo, sino directamente).
+	\end{itemize}
+\section{Tema 5 y 6}
+Estos, como mencionó, se podrán contestar más adelante en el curso.
