Tarea1Cuantica y ht3

--- a/Mecánica Cuántica/CosasImportantes/content.tex
+++ b/Mecánica Cuántica/CosasImportantes/content.tex
@@ -52,8 +52,15 @@ donde $\hat{H}$ es el operador hamiltoniano, el cual corresponde a la energía t
 \end{table}
 
 
+\section{Problemas Unidimensionales}
 
+\begin{teorema}
+	En un problema unidimensional los niveles de enrgía de un sistema de estado ligado son discretos y no degenerados.
+\end{teorema}
 
+\begin{teorema}
+	La funcion de onda $\psi _n (x)$ de un sistema unidimensional de estado ligado tiene $n$ nodos si $n=0$ corresponde al estado fundamental y $(n-1)$ nodos si $n=1$ corresponde al estado fundamental.
+\end{teorema}
 
 
 
