--- a/Programación Matemática 2/Practica2/content.tex
+++ b/Programación Matemática 2/Practica2/content.tex
@@ -1,4 +1,4 @@
-Esta práctica se dividió en 3 diagramas pensando en la implementación, se realizó uno para las fechas en los 3 formatos dados, uno para las palabras clave (el cual se verá que es bastante simple) y uno para los números.
+Esta práctica se dividió en 3 diagramas pensando en la implementación, se realizó uno para las fechas en los 3 formatos dados, uno para las palabras clave (el cual se verá que es bastante simple) y uno para los números. Para este trabajo se tomó a $d = \{ 0,1,2,3,4,5,6,7,8,9 \}$.
 
 \section{Fechas}
 Para las fechas se creo la siguiente expresión regular
@@ -296,7 +296,12 @@ AFD Numeración & Elemento de $\mathcal{P} (Q)$ & d     & .  & +  & -     & exp 
 
 Con todo esto, se llegó a la forma visual del autómata, la cual se inició en el software en el cual se hizo la de las fechas, pero por restricciones del programa hay número limitado de objetos, entonces se hizo a mano y se adjuntó una foto del mismo.
 
-
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.35]{Images/AFDnumeros.jpeg}
+	\caption{AFD creado con la tabla de transiciones \ref{AFDnumeros}.}
+	\label{AFDimagen}
+\end{figure}
 
 
 
