--- a/Relatividad Especial/TareaParcial2/content.tex
+++ b/Relatividad Especial/TareaParcial2/content.tex
@@ -1,3 +1,8 @@
+\section{Observador Newtoniano y Distancia Temporal Relativista}
+Un Observador Inercial Newtoniano no puede medir diferencias temporales. Sin embarco, se puede definir un marco propio para el cual la diferencia relativista entre dos eventos sea equivalente a la diferencia Newtoniana. Pero, si lo que se desea es comparar una medida newtoniana con un marco propio distinto al asociado, las medidas no son equivalentes, pero se pueden relacionar mediante
+	$$\tau = \gamma \tau _0.$$
+Donde $\tau$ es la medida relativista y $\tau _0$ es la medida newtoniana.
+
 \section{Experimento Michelson$-$Morley}
 
 \subsection{Contexto Histórico}
