--- a/Mecánica Cuántica/tarea2/tarea2.tex
+++ b/Mecánica Cuántica/tarea2/tarea2.tex
@@ -4,8 +4,8 @@
 \usepackage{fancyhdr}%formato de pagina
 \pagestyle{fancy}%colocar la pagina con el formato deseado
 \fancyhead{}
-\fancyhead[L]{\footnotesize{Estadística 1}}
-\fancyhead[C]{Tarea 4}
+\fancyhead[L]{\footnotesize{Mecánica Cuántica 1}}
+\fancyhead[C]{Tarea 1}
 \fancyhead[R]{\footnotesize{\thepage}}
 %\fancyhead[LO,RE]{Cálculo 3}
 %\fancyhead[RO,LE]{\footnotesize{\thepage}}
@@ -26,6 +26,7 @@
 \begin{document}
 \begin{titlepage}
 \input{Header_original}
+
 \input{content.tex}
 
 \end{titlepage}
