--- a/Mecánica Cuántica/Ht6/ht6/content.tex
+++ b/Mecánica Cuántica/Ht6/ht6/content.tex
@@ -3,6 +3,8 @@
 \begin{enumerate}[a)]
 	\item Constante de normalización $\sqrt{\dfrac{a}{\pi}}$.
 	\item La probabilidad de encontrar la partícula en en intervalo $\qty(\frac{-a}{\sqrt{3}} ,\frac{a}{\sqrt{3}})$ es: $\frac{1}{3}$.
+	\item Para el valor esperado del operador momentum, tenemos el siguiente cálculo
+		$$\expval{\vu{P}}{\psi} = \int _{-\infty} ^\infty \psi ^* \pdv{\psi}{x} \dd{x} = i\frac{p_0}{\hbar}$$
 \end{enumerate}
 
 \section{Problema 2}
@@ -49,7 +51,15 @@ Utilizando el teorema de Ehrenfest para el hamiltoniano dado, encontramos las ec
 	Resolviendo las ecuaciones diferenciales, la solución la realizamos en mathematica. 
 
 \section{Problema 6}
-
+\begin{enumerate}[a)]
+	\item Teniendo la función de onda dada, la constante de normalización es:
+		$$\boxed{N = \frac{1}{\sqrt{8abc}}.}$$
+	\item Dado el resultado de la integral y sabiendo las propiedades de exponentes, entonces se tiene que la probabilidad de se de un resultado entre $0$ y $a$ es
+		$$\frac{\left(1-e^{-\frac{1}{\text{sgn}(a)}}\right) \text{sgn}(a)}{8 b c} e^{-\qty(\frac{\abs{y}}{b} + \frac{\abs{z}}{c})},$$
+		donde $\text{sgn} (a)$ es la función signo.
+	\item Calculamos para $-b$ a $b$ y  para $-c$ a $c$, integramos dos veces, siguiendo el resultado mostrado en mathematica:
+		$$\frac{\text{sgn}(b) \text{sgn}(c) \qty(1 - e^{-\text{sgn}(b)}) \qty(1 - e^{-\text{sgn}(c)})}{2a}$$
+\end{enumerate}
 
 
 
